--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,28 +1,33 @@
 html,
 body {
-	margin: 0;
-	padding: 0;
+    margin: 0;
+    padding: 0;
 
-	font-family:
-		-apple-system,
-		BlinkMacSystemFont,
-		Segoe UI,
-		Roboto,
-		Oxygen,
-		Ubuntu,
-		Cantarell,
-		Fira Sans,
-		Droid Sans,
-		Helvetica Neue,
-		sans-serif;
+    font-family: var(--first-family);
+    color: var(--black);
+    background-color: var(--white);
 }
 
 a {
-	text-decoration: none;
+    text-decoration: none;
 
-	color: inherit;
+    color: inherit;
 }
 
 * {
-	box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+:root {
+    --white: #ffffff;
+    --black: #1c2528;
+    --blue: #172c70;
+    --bronze: #e4c4a8;
+    --bronze-light: #ebe7e0;
+    --bronze-superlight: #f7f5f2;
+    --light-red: #ff8059;
+    --light-blue: #55beda;
+    --light-purple: #b9d1e4;
+    --first-family: "Rubik", sans-serif;
+    --second-family: "Sorts Mill Goudy", serif;
 }
